<resources>
    <string name="app_name">DeTEXT App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up">or Sign up</string>
    <string name="signing_in">Signing in…</string>
    <string name="error">Error</string>
    <string name="create_acc">Create new account</string>
    <string name="conf_pass">Confirm password</string>
    <string name="signing_up">Signing up…</string>
    <string name="invalid_pass">Invalid passwords</string>
    <string name="temperature">Temperature</string>
    <string name="location">Location</string>
    <string name="date">dd/MM/yyyy HH:mm:ss</string>
    <string name="type_word">Type a word</string>
    <string name="transl_word">Translated word</string>
    <string name="translate">Translate</string>
    <string name="wait">Wait…</string>
    <string name="failed">Failed</string>
    <string name="transl_failed">Translation has been failed</string>
    <string name="detect_img">Detect Image</string>
    <string name="open_gallery">Open gallery</string>
    <string name="open_camera">Open camera</string>
    <string name="live_camera">Live capture</string>
    <string name="sign_out">Sign out</string>
    <string name="view_history">View history</string>
    <string name="not_available">Not available</string>
    <string name="for_details">Press \'Show\' for details</string>
    <string name="show">Show</string>
    <string name="lang_of_block">Language of block:</string>
    <string name="original_txt">Original text:</string>
    <string name="transl_txt">Translated text:</string>
    <string name="save_img">Save image to history</string>
    <string name="share">Share to:</string>
    <string name="copied">Copied to clipboard</string>
    <string name="saving">Saving…</string>
    <string name="could_not_upload">Couldn\'t upload image</string>
    <string name="found_nothing">Nothing was found</string>
    <string name="no_history">No history</string>
    <string name="loading">Loading…</string>
    <string name="card_details">card\'s details</string>
    <string name="block">Block </string>
    <string name="translator">Translator</string>
    <string name="acc">Account</string>
    <string name="ok">Ok</string>
    <string name="unrecognized">Unrecognized laguage</string>
    <string name="removed">Removed</string>
</resources>