<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg3"
    tools:context=".navmenu.detection.ImageResultsActivity">

    <TextView
        android:id="@+id/totalNumberOfBlocks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/for_details"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/showTextsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showTextsButton" />

    <Button
        android:id="@+id/showTextsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewInImageResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:fillViewport="true"
        android:scrollbarSize="4dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTextsButton">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/save_img"
                app:layout_constraintEnd_toEndOf="@+id/translatedTextOfBlock"
                app:layout_constraintStart_toStartOf="@+id/translatedTextOfBlock"
                app:layout_constraintTop_toBottomOf="@+id/translatedTextOfBlock" />

            <ImageButton
                android:id="@+id/twitterButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/instaButton"
                app:layout_constraintTop_toTopOf="@+id/fbButton"
                app:srcCompat="@drawable/twitter_icon" />

            <ImageButton
                android:id="@+id/copyTranslatedText"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/translatedTextOfBlock"
                app:srcCompat="@drawable/ic_copy" />

            <TextView
                android:id="@+id/languageOfBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:text="language"
                android:textColor="@color/txtBlue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/languageOfBlockTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languageOfBlockTxt" />

            <TextView
                android:id="@+id/languageOfBlockTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/lang_of_block"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previousBlockButton" />

            <TextView
                android:id="@+id/translatedTextTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/transl_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/originalTextOfBlock"
                app:layout_constraintTop_toBottomOf="@+id/originalTextOfBlock" />

            <TextView
                android:id="@+id/translatedTextOfBlock"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:scrollbars="vertical"
                android:text="original text of block"
                android:textColor="@color/txtBlue"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/copyTranslatedText"
                app:layout_constraintStart_toStartOf="@+id/translatedTextTxt"
                app:layout_constraintTop_toBottomOf="@+id/translatedTextTxt" />

            <TextView
                android:id="@+id/originalTextOfBlock"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:scrollbars="vertical"
                android:text="original text of block"
                android:textColor="@color/txtBlue"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/copyOriginalText"
                app:layout_constraintStart_toStartOf="@+id/originalTextTxt"
                app:layout_constraintTop_toBottomOf="@+id/originalTextTxt" />

            <TextView
                android:id="@+id/numberOfBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="number of block"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/nextBlockButton"
                app:layout_constraintStart_toEndOf="@+id/previousBlockButton"
                app:layout_constraintTop_toTopOf="@+id/previousBlockButton" />

            <ImageButton
                android:id="@+id/previousBlockButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uploadedImg"
                app:srcCompat="@drawable/ic_arrow_circle_left" />

            <ImageButton
                android:id="@+id/nextBlockButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/previousBlockButton"
                app:srcCompat="@drawable/ic_arrow_circle_right" />

            <TextView
                android:id="@+id/originalTextTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/original_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/languageOfBlock"
                app:layout_constraintTop_toBottomOf="@+id/languageOfBlock" />

            <ImageButton
                android:id="@+id/copyOriginalText"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/originalTextOfBlock"
                app:srcCompat="@drawable/ic_copy" />

            <ImageButton
                android:id="@+id/fbButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="100dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/fb_icon" />

            <ImageButton
                android:id="@+id/instaButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/fbButton"
                app:layout_constraintTop_toTopOf="@+id/fbButton"
                app:srcCompat="@drawable/insta_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/share"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/translatedTextOfBlock"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <ImageView
                android:id="@+id/uploadedImg"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_photo" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>