<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg3"
    tools:context=".navmenu.account.DetailsOfCardHistoryActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/card_details"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:fillViewport="true"
        android:scrollbarSize="4dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="100dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateDetailsHistory"
                app:srcCompat="@drawable/load" />

            <TextView
                android:id="@+id/numberOfBlockDetailsHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Number of block"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/nextBtnDetailsHistory"
                app:layout_constraintStart_toEndOf="@+id/previousBtnDetailsHistory"
                app:layout_constraintTop_toTopOf="@+id/previousBtnDetailsHistory" />

            <ImageButton
                android:id="@+id/previousBtnDetailsHistory"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/imgDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/imgDetailsHistory"
                app:srcCompat="@drawable/ic_arrow_circle_left" />

            <ImageButton
                android:id="@+id/nextBtnDetailsHistory"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/imgDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/imgDetailsHistory"
                app:srcCompat="@drawable/ic_arrow_circle_right" />

            <TextView
                android:id="@+id/languageOfBlockTextviewDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/lang_of_block"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previousBtnDetailsHistory" />

            <TextView
                android:id="@+id/originalTextTextviewDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/original_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/languageValueDetailsHistory"
                app:layout_constraintStart_toStartOf="@+id/languageValueDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/languageValueDetailsHistory" />

            <TextView
                android:id="@+id/translatedTextTextviewDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/transl_txt"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/originalTextValueDetailsHistory"
                app:layout_constraintStart_toStartOf="@+id/originalTextValueDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/originalTextValueDetailsHistory" />

            <TextView
                android:id="@+id/languageValueDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:text="language"
                android:textColor="@color/txtBlue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/languageOfBlockTextviewDetailsHistory"
                app:layout_constraintStart_toStartOf="@+id/languageOfBlockTextviewDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/languageOfBlockTextviewDetailsHistory" />

            <TextView
                android:id="@+id/originalTextValueDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:scrollbars="vertical"
                android:text="original text of block"
                android:textColor="@color/txtBlue"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/copyOrgnlTxtDetails"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/originalTextTextviewDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/originalTextTextviewDetailsHistory" />

            <TextView
                android:id="@+id/translatedTextValueDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="180dp"
                android:background="@drawable/text_border"
                android:paddingHorizontal="5dp"
                android:scrollbars="vertical"
                android:text="original text of block"
                android:textColor="@color/txtBlue"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/copyTranslTxtDetails"
                app:layout_constraintStart_toStartOf="@+id/translatedTextTextviewDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/translatedTextTextviewDetailsHistory" />

            <TextView
                android:id="@+id/dateDetailsHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="70dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/copyOrgnlTxtDetails"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/originalTextValueDetailsHistory"
                app:srcCompat="@drawable/ic_copy" />

            <ImageButton
                android:id="@+id/copyTranslTxtDetails"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/translatedTextValueDetailsHistory"
                app:srcCompat="@drawable/ic_copy" />

            <TextView
                android:id="@+id/shareToTextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/share"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/translatedTextValueDetailsHistory"
                app:layout_constraintTop_toBottomOf="@+id/translatedTextValueDetailsHistory" />

            <ImageButton
                android:id="@+id/fbShareDetails"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="@+id/shareToTextViewDetails"
                app:layout_constraintTop_toBottomOf="@+id/shareToTextViewDetails"
                app:srcCompat="@drawable/fb_icon" />

            <ImageButton
                android:id="@+id/instaShareDetails"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/fbShareDetails"
                app:layout_constraintTop_toTopOf="@+id/fbShareDetails"
                app:srcCompat="@drawable/insta_icon" />

            <ImageButton
                android:id="@+id/twitterShareDetails"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/instaShareDetails"
                app:layout_constraintTop_toTopOf="@+id/instaShareDetails"
                app:srcCompat="@drawable/twitter_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>